zad 6 finish