@@ -1,7 +1,11 @@
 import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
 public class Zad6 {
     public static void main(String[] args) {
@@ -10,19 +14,30 @@ public class Zad6 {
             return;
         }
 
-        zapiszStroneWWW(args);
+        zapiszStronyWWW(args);
     }
 
-    private static void zapiszStroneWWW(String[] strony) {
-        for (var strona : strony) {
+    private static void zapiszStronyWWW(String[] strony) {
+        Path katalogDocelowy = Path.of("src/files/pobrane");
+
+
+        for (String strona : strony) {
             try {
-                // Tworzenie połączenia z podanym URL
-                URL url = new URL(strona);
+                // Tworzymy URI i konwertujemy na URL, by uniknąć deprecated konstruktora
+                URI uri = new URI(strona.startsWith("http") ? strona : "https://" + strona);
+                URL url = uri.toURL();
+
                 HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
-                // Pobieranie i zapisywanie zawartości strony
+                // generowanie unikalnej nazwy na podstawie nazwy stronki
+                String nazwaPliku = uri.getHost() != null
+                        ? uri.getHost().replaceAll("[^a-zA-Z0-9]", "_") + ".html"
+                        : "strona.html";
+
+                Path sciezkaPliku = katalogDocelowy.resolve(nazwaPliku);
+
                 try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-                     BufferedWriter writer = new BufferedWriter(new FileWriter("nazwaPliku.html"))) {
+                     BufferedWriter writer = new BufferedWriter(new FileWriter(sciezkaPliku.toFile()))) {
 
                     String linia;
                     while ((linia = reader.readLine()) != null) {
@@ -30,18 +45,20 @@ public class Zad6 {
                         writer.newLine();
                     }
 
-                    // System.out.println("Zapisano: " + nazwaPliku);
+                    System.out.println("Zapisano: " + sciezkaPliku);
                 } catch (IOException e) {
                     System.out.println("Błąd podczas zapisu: " + e.getMessage());
                 }
 
+            } catch (URISyntaxException e) {
+                System.out.println("Nieprawidłowy adres URI: " + strona);
             } catch (MalformedURLException e) {
                 System.out.println("Nieprawidłowy adres URL: " + strona);
             } catch (IOException e) {
                 System.out.println("Błąd podczas pobierania strony: " + strona);
             }
         }
-        System.out.println("Próba udana");
 
+        System.out.println("Pobieranie stron/-y zakończone.");
     }
 }
